Deals with sigsegv on pandora's test
Fork on test to avoid sigsegv during pandora's test (no idea what
causes the problem or why this solves it, but it's always while
compiling Array.ofDim). Pass memory parameters and data dir as
Java options.